# tsf-app

./: .env.example  .gitignore  README.md  activate.ps1  activate.sh  pyproject.toml  run.py
backend/: app.py  config.py  requirements.txt  run.py
backend/api/: routes.py
backend/auth/: routes.py
backend/models/: user.py
backend/utils/: create_user.py  database.py  limiter.py  ml_api_client.py
frontend/: dashboard.html  index.html
frontend/css/: dashboard.css  login.css
frontend/js/: auth.js  dashboard.js
