[tool.poetry]
package-mode = false

[project]
name = "tsf-app"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-limiter (>=3.12,<4.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "limits (>=5.4.0,<6.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "boto3 (>=1.40.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bson (>=0.5.10,<0.6.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "botocore (>=1.40.2,<2.0.0)",
    "cachelib (>=0.13.0,<0.14.0)",
    "certifi (>=2025.8.3,<2026.0.0)",
    "deprecated (>=1.2.18,<2.0.0)",
    "packaging (>=25.0,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
